--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://developerfolio.js.org/",
-  "name": "saadpasta.github.io",
+  "homepage": "https://www.banishangural.github.io",
+  "name": "banishangural.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
