--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://banishangural.github.io/banishangural.github.io",
-  "name": "Banish Angural",
+  "name": "banishangural.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
