changed the homepage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://banishangural.github.io/banishangural.github.io",
+  "homepage": "https://banishangural.github.io",
   "name": "banishangural.github.io",
   "version": "0.1.0",
   "private": true,
